Actions
Bug #10365
closedmodconf: cast between incompatible function types
Start date:
2019-02-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Issue from gcc8 build:
../../common/os/modconf.c:792:21: error: cast between incompatible function types from 'int (*)()' to 'int64_t (*)()' {aka 'long int (*)()'} [-Werror=cast-function-type] sysp->sy_callc = (int64_t (*)())mp->sy_call; ^ ../../common/os/modconf.c: In function 'mod_removesys_sysent': ../../common/os/modconf.c:837:20: error: cast between incompatible function types from 'int64_t (*)(void)' {aka 'long int (*)(void)'} to 'int (*)()' [-Werror=cast-function-type] sysp->sy_call = (int (*)())nosys; ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 954fa1e90ed4bd3992f7c431c152b972a1845034
commit 954fa1e90ed4bd3992f7c431c152b972a1845034 Author: Toomas Soome <tsoome@me.com> Date: 2019-02-13T18:20:53.000Z 10365 modconf: cast between incompatible function types Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Hans Rosenfeld <hans.rosenfeld@joyent.com>
Actions