usr/src/uts/common/os/modconf.c
@@ -793,7 +793,7 @@ mod_installsys_sysent(
 	 */
 	if (mp->sy_flags & SE_NOUNLOAD) {
 		if (mp->sy_flags & SE_ARGC) {
-			sysp->sy_callc = (int64_t (*)())mp->sy_call;
+			sysp->sy_callc = (int64_t (*)())(uintptr_t)mp->sy_call;
 		} else {
 			sysp->sy_callc = syscall_ap;
 		}
@@ -838,7 +838,7 @@ mod_removesys_sysent(
 		    (SE_LOADED | SE_LOADABLE)) {
 			sysp->sy_flags &= ~SE_LOADED;
 			sysp->sy_callc = loadable_syscall;
-			sysp->sy_call = (int (*)())nosys;
+			sysp->sy_call = nosys32;
 			rw_exit(sysp->sy_lock);
 			return (0);
 		}
